Fix button sticking hover on mobile devices

--- a/src/components/QuoteBox/QuoteBox.css
+++ b/src/components/QuoteBox/QuoteBox.css
@@ -57,9 +57,11 @@ cursor: pointer ;
 font-size: calc(8px + 2vmin);
 }
 
-#new-quote:hover {
-background: #434343;
-letter-spacing: 1px;
-box-shadow: 5px 40px -10px rgba(0,0,0,0.57);
-transition: all 0.4s ease 0s;
+@media (hover: hover) {
+  #new-quote:hover {
+  background: #434343;
+  letter-spacing: 1px;
+  box-shadow: 5px 40px -10px rgba(0,0,0,0.57);
+  transition: all 0.4s ease 0s;
+  }
 }
